spacing issues

--- a/wp-content/themes/marketify/style.css
+++ b/wp-content/themes/marketify/style.css
@@ -405,7 +405,7 @@ a:active {
 	transition: color .15s linear, background-color .15s ease-in-out, border-color .15s ease-in-out;
 }
 .greenbutton:hover {
-	background-color: #FFF;
+	background-color: #EEEEEE;
 	border-color: #473E3E;
 	color: #473E3E;
  
@@ -1653,6 +1653,15 @@ padding-top: 0;
 
 .content-grid-download span.byline {
 font-size: 12px;
+display:block;
+padding-top:10px;
+padding-bottom:8px;
+
+
+}
+
+.content-grid-download .div{
+	padding:0;
 }
 
 .content-grid-download .form-horizontal .control-label {
@@ -4942,9 +4951,12 @@ ul.none li, ul.edd-taxonomy-widget li {
 	display: inline-block;
 }
 .des {
-    height: 70px;
+    /*height: 70px;   
+ margin-bottom: 10px;
+    */
     word-wrap: break-word;
-    margin-bottom: 10px;
+    padding-bottom:18px;
+   
 }
 .edd_download_title ,.sub,.grades,.resource-type{
      display: block;
@@ -5377,6 +5389,8 @@ font-size: 16px;
 	-moz-box-shadow: 0px 0px 5px 0.5px rgba(13,13,13,0.27);
 	box-shadow: 0px 0px 5px 0.5px rgba(13,13,13,0.27);
 	padding: 10px;
+	padding-top:50px;
+	padding-bottom:50px;
 	background-color: #fff;
 }
 
